@@ -30,7 +30,7 @@ import jdk.internal.org.objectweb.asm.Label;
 import jdk.internal.org.objectweb.asm.MethodVisitor;
 import jdk.internal.org.objectweb.asm.Opcodes;
 import jdk.internal.vm.annotation.ForceInline;
-import sun.misc.Unsafe;
+import jdk.internal.misc.Unsafe;
 
 import java.lang.invoke.MethodHandles.Lookup;
 import java.security.AccessController;
@@ -96,6 +96,8 @@ import static jdk.internal.org.objectweb.asm.Opcodes.*;
  * more than 200 argument slots. Users requiring more than 200 argument slots in
  * concatenation are expected to split the large concatenation in smaller
  * expressions.
+ *
+ * @since 9
  */
 public final class StringConcatFactory {
 
@@ -180,22 +182,30 @@ public final class StringConcatFactory {
 
     private static final ConcurrentMap<Key, MethodHandle> CACHE;
 
+    /**
+     * Dump generated classes to disk, for debugging purposes.
+     */
+    private static final ProxyClassesDumper DUMPER;
+
     static {
         // Poke the privileged block once, taking everything we need:
-        final Object[] values = new Object[3];
+        final Object[] values = new Object[4];
         AccessController.doPrivileged((PrivilegedAction<Object>) () -> {
             values[0] = System.getProperty("java.lang.invoke.stringConcat");
             values[1] = Boolean.getBoolean("java.lang.invoke.stringConcat.cache");
             values[2] = Boolean.getBoolean("java.lang.invoke.stringConcat.debug");
+            values[3] = System.getProperty("java.lang.invoke.stringConcat.dumpClasses");
             return null;
         });
 
         final String strategy = (String)  values[0];
         CACHE_ENABLE          = (Boolean) values[1];
         DEBUG                 = (Boolean) values[2];
+        final String dumpPath = (String)  values[3];
 
         STRATEGY = (strategy == null) ? DEFAULT_STRATEGY : Strategy.valueOf(strategy);
         CACHE = CACHE_ENABLE ? new ConcurrentHashMap<>() : null;
+        DUMPER = (dumpPath == null) ? null : ProxyClassesDumper.getInstance(dumpPath);
     }
 
     private static final class Key {
@@ -548,6 +558,12 @@ public final class StringConcatFactory {
 
         for (Object o : constants) {
             Objects.requireNonNull(o, "Cannot accept null constants");
+        }
+
+        if ((lookup.lookupModes() & MethodHandles.Lookup.PRIVATE) == 0) {
+            throw new StringConcatException(String.format(
+                    "Invalid caller: %s",
+                    lookup.lookupClass().getName()));
         }
 
         int cCount = 0;
@@ -955,6 +971,22 @@ public final class StringConcatFactory {
                     storage trimming, which defeats the purpose of exact strategies.
                  */
 
+                /*
+                   The logic for this check is as follows:
+
+                     Stack before:     Op:
+                      (SB)              dup, dup
+                      (SB, SB, SB)      capacity()
+                      (int, SB, SB)     swap
+                      (SB, int, SB)     toString()
+                      (S, int, SB)      length()
+                      (int, int, SB)    if_icmpeq
+                      (SB)              <end>
+
+                   Note that it leaves the same StringBuilder on exit, like the one on enter.
+                 */
+
+                mv.visitInsn(DUP);
                 mv.visitInsn(DUP);
 
                 mv.visitMethodInsn(
@@ -965,7 +997,7 @@ public final class StringConcatFactory {
                         false
                 );
 
-                mv.visitIntInsn(ISTORE, 0);
+                mv.visitInsn(SWAP);
 
                 mv.visitMethodInsn(
                         INVOKEVIRTUAL,
@@ -975,8 +1007,6 @@ public final class StringConcatFactory {
                         false
                 );
 
-                mv.visitInsn(DUP);
-
                 mv.visitMethodInsn(
                         INVOKEVIRTUAL,
                         "java/lang/String",
@@ -984,8 +1014,6 @@ public final class StringConcatFactory {
                         "()I",
                         false
                 );
-
-                mv.visitIntInsn(ILOAD, 0);
 
                 Label l0 = new Label();
                 mv.visitJumpInsn(IF_ICMPEQ, l0);
@@ -1001,15 +1029,15 @@ public final class StringConcatFactory {
                 mv.visitInsn(ATHROW);
 
                 mv.visitLabel(l0);
-            } else {
-                mv.visitMethodInsn(
-                        INVOKEVIRTUAL,
-                        "java/lang/StringBuilder",
-                        "toString",
-                        "()Ljava/lang/String;",
-                        false
-                );
             }
+
+            mv.visitMethodInsn(
+                    INVOKEVIRTUAL,
+                    "java/lang/StringBuilder",
+                    "toString",
+                    "()Ljava/lang/String;",
+                    false
+            );
 
             mv.visitInsn(ARETURN);
 
@@ -1020,6 +1048,10 @@ public final class StringConcatFactory {
             Class<?> targetClass = lookup.lookupClass();
             final byte[] classBytes = cw.toByteArray();
             final Class<?> innerClass = UNSAFE.defineAnonymousClass(targetClass, classBytes, null);
+
+            if (DUMPER != null) {
+                DUMPER.dumpClass(innerClass.getName(), classBytes);
+            }
 
             try {
                 UNSAFE.ensureClassInitialized(innerClass);
@@ -1483,7 +1515,7 @@ public final class StringConcatFactory {
             //
             // The method handle shape after all length and coder mixers is:
             //   (int, byte, <args>)String = ("index", "coder", <args>)
-            byte initialCoder = 0; // initial coder
+            byte initialCoder = INITIAL_CODER;
             int initialLen = 0;    // initial length, in characters
             for (RecipeElement el : recipe.getElements()) {
                 switch (el.getTag()) {
@@ -1616,11 +1648,14 @@ public final class StringConcatFactory {
         private static final ConcurrentMap<Class<?>, MethodHandle> LENGTH_MIXERS;
         private static final ConcurrentMap<Class<?>, MethodHandle> CODER_MIXERS;
         private static final Class<?> STRING_HELPER;
+        private static final byte INITIAL_CODER;
 
         static {
             try {
                 STRING_HELPER = Class.forName("java.lang.StringConcatHelper");
-            } catch (ClassNotFoundException e) {
+                MethodHandle initCoder = lookupStatic(Lookup.IMPL_LOOKUP, STRING_HELPER, "initialCoder", byte.class);
+                INITIAL_CODER = (byte) initCoder.invoke();
+            } catch (Throwable e) {
                 throw new AssertionError(e);
             }
 
